# moDb

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  arquitetura.md  codigo-local.md  conta.modb.wal  melhorias.md  streaming.md
.cursor/rules/: entrega-completa-master-tag.mdc
.github/workflows/: oci-image.yml
apps/modb_cli/: main.cpp
benchmark-results-10f/: modb-benchmark-20260719T120331.619Z-caed989260b0-eac301be.jsonl
benchmarks/: modb_bench.cpp  object_throughput.cpp
benchmarks/runner/: campaign.cpp  campaign.hpp  environment.cpp  environment.hpp  json_util.hpp  jsonl_writer.cpp  jsonl_writer.hpp  profile.cpp  profile.hpp  sha256.cpp  sha256.hpp
benchmarks/scenarios/: buffer_pool_oversubscribed.cpp  buffer_pool_oversubscribed.hpp  graph_traversal.cpp  graph_traversal.hpp  object_store_lifecycle.cpp  object_store_lifecycle.hpp  object_store_read_hotpath.cpp  object_store_read_hotpath.hpp
cmake/: moDbConfig.cmake.in
deploy/: .dockerignore  .gitattributes  Dockerfile  compose.yaml  entrypoint.sh
deploy/k8s/: modb.yaml
docs/: API_PUBLICA.md  BASELINE_DESEMPENHO.md  COMPATIBILIDADE.md  CONSTITUTION_RING0.md  ESCOPO_MVP.md  FACADES.md  FECHAMENTO_10F.md  FORMATO_DE_ARQUIVO.md  FUZZING.md  GARANTIAS_TRANSACIONAIS.md  GLOSSARIO.md  OPERACAO.md  OPERACAO_MODULOS.md  OPERACAO_REPLICACAO.md  OPERACAO_SERVERLESS.md  OTIMIZACOES_10C.md  PLANO_BENCHMARKS.md  PLANO_DE_DESENVOLVIMENTO.md  PLANO_ODB.md  PROTOCOLO_FASES.md  RASTREADOR.md  README.md  RELATORIO_CHECK_RECOVERY_FASES_5_6.md  USO_DA_CLI.md
docs/decisions/: 0001-formato-de-armazenamento.md  0002-tipos-e-erros.md  ADR-001-identidade.md  ADR-002-bootstrap-do-catalogo.md  ADR-003-tipos-e-encoding.md  ADR-004-pagina-raiz-do-banco.md  ADR-005-mapa-de-identidade.md  ADR-006-destino-do-codigo-relacional.md  ADR-007-limites-mvp-oo.md  ADR-008-integridade-de-referencias.md  ADR-009-epocas-e-idmp-v2.md  ADR-010-protocolo-binario-proximo-do-armazenamento.md  ADR-011-concorrencia-do-servidor.md  ADR-012-runtime-de-modulos-no-processo.md  ADR-013-execucao-serverless-em-container.md  ADR-014-catalogo-de-facades-e-handles.md  ADR-015-compatibilidade.md  ADR-015-handles-de-arestas-e-algoritmos-de-grafos.md  ADR-016-replica-de-leitura-por-streaming-do-wal.md  ADR-017-primary-wal-only-sem-arquivos-de-dados.md  ADR-018-handles-de-arestas-e-algoritmos-de-grafos.md  ADR-019-io-assincrono.md
examples/: README.md
examples/accounts_facade/: accounts_facade.cpp  accounts_facade.hpp
examples/server/: README.md
examples/server/by_phase/: README.md
examples/transfer_funds/: transfer_funds.cpp  transfer_funds.hpp
include/modb/: catalog.hpp  compatibility.hpp  data_type.hpp  error.hpp  limits.hpp  row.hpp  schema.hpp  table.hpp  text_escape.hpp  value.hpp  version.hpp
include/modb/app/: server_connection.hpp
include/modb/detail/: overloaded.hpp
include/modb/graph/: algorithms.hpp  edge_handle.hpp  graph_view.hpp  traversal.hpp
include/modb/index/: btree.hpp  key_codec.hpp
include/modb/net/: client.hpp  native_socket.hpp  probe.hpp  protocol.hpp  query_description.hpp  replication_protocol.hpp  server.hpp
include/modb/object/: attribute_value.hpp  baseline.hpp  binding.hpp  binding_builder.inl  blob_store.hpp  catalog_store.hpp  collection.hpp  database.hpp  database_root.hpp  handle.hpp  identity_map.hpp  ids.hpp  index_catalog.hpp  object_codec.hpp  object_store.hpp  projection_plan.hpp  ref.hpp  type_definition.hpp  type_registry.hpp
include/modb/ops/: execution_context.hpp  facade_catalog.hpp  facade_descriptor.hpp  facade_handle.hpp  logger.hpp  module_manifest.hpp  object_access.hpp  operation.hpp  operation_registry.hpp
include/modb/query/: generator.hpp  operators.hpp  planner.hpp  projected_row.hpp
include/modb/repl/: replication.hpp
include/modb/storage/: async_file.hpp  binary.hpp  buffer_pool.hpp  codec.hpp  database_check.hpp  (+8 more)
scripts/: run-benchmarks.ps1  run-benchmarks.sh  run-remote-benchmark.ps1
src/: text_escape.cpp  version.cpp
src/app/: server_connection.cpp
src/catalog/: catalog.cpp  table.cpp
src/graph/: graph_view.cpp
src/index/: btree.cpp
src/model/: data_type.cpp  schema.cpp  value.cpp
src/net/: client.cpp  native_socket.cpp  protocol.cpp  replication_protocol.cpp  server.cpp
src/object/: attribute_value.cpp  baseline.cpp  binding.cpp  blob_store.cpp  catalog_store.cpp  collection.cpp  database.cpp  database_root.cpp  identity_map.cpp  index_catalog.cpp  object_codec.cpp  object_store.cpp  projection_plan.cpp  type_definition.cpp  type_registry.cpp
src/ops/: facade_catalog.cpp  module_manifest.cpp  operation_registry.cpp
src/repl/: bootstrap.cpp
src/storage/: async_file_impl.ipp  async_file_linux.cpp  async_file_windows.cpp  binary.cpp  buffer_pool.cpp  codec.cpp  database_check.cpp  native_file.cpp  page_cache.cpp  page_file.cpp  scratch_page_pool.cpp  slotted_page.cpp  table_heap.cpp
src/tx/: recovery.cpp  wal.cpp
tests/: aggregation_query_test.cpp  app_server_connection_test.cpp  async_file_test.cpp  benchmark_runner_test.cpp  binding_test.cpp  blob_store_test.cpp  btree_test.cpp  buffer_pool_test.cpp  catalog_persistence_test.cpp  catalog_test.cpp  codec_test.cpp  collection_test.cpp  compatibility_test.cpp  database_check_test.cpp  database_identity_test.cpp  edge_handle_test.cpp  facade_catalog_test.cpp  facade_handle_test.cpp  facade_server_test.cpp  failpoint_file.hpp  failpoint_test.cpp  generator_test.cpp  graph_algorithms_test.cpp  graph_view_test.cpp  identity_map_test.cpp  index_catalog_test.cpp  indexed_query_test.cpp  model_test.cpp  mvcc_recovery_test.cpp  object_codec_test.cpp  object_model_test.cpp  object_store_test.cpp  operation_server_test.cpp  operation_test.cpp  page_cache_test.cpp  planner_test.cpp  projection_query_test.cpp  projection_test.cpp  protocol_test.cpp  recovery_test.cpp  (+21 more)
tests/consumer/: CMakeLists.txt  main.cpp  run_consumer_check.cmake
tests/fuzz/: fuzz_blob_chain.cpp  fuzz_common.hpp  fuzz_object_codec.cpp  fuzz_protocol.cpp  fuzz_type_definition.cpp  fuzz_wal.cpp
(+31 files in other folders)
